# et-policy-package

./: README.md  __init__.py  pyproject.toml
src/et_rucio_policy_package/: __init__.py  permission.py  schema.py
