[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "et_rucio_policy_package"
version = "0.0.1"
authors = [
    { name="Lia Lavezzi", email="lia.lavezzi@to.infn.it" },
]
description = "Rucio policy package for Einstein Telescope"
requires-python = ">=3.9"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]
readme = "README.md"
license = {file = "LICENSE"}

#[project.optional-dependencies]
#dev = [
#    "rucio>=32.8.0"
#]
